welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: not found: value c
	setCouleurBrosse(c);
                         ^FlowerPot:15: error: not found: value RED
def growFlowers() = {faireFle(RED);
                              ^FlowerPot:17: error: not found: value CYAN
faireFle(CYAN)
         ^FlowerPot:21: error: not found: value ORANGE
faireFle(ORANGE)
         ^FlowerPot:26: error: not found: value GREEN
faireFle(GREEN)
         ^FlowerPot:28: error: not found: value PINK
faireFle(PINK)
         ^