welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def faireFle(C:Color) = {
	setCouleurBrosse(c);
	baisseBrosse()
	avance(2)
	recule()
	gauche()
	avance()
	recule(2)
	avance()
	setCouleurBrosse(Color.YELLOW)
	droite()
	recule()}

def growFlowers() = {faireFle(RED);
avance(4);
faireFle(CYAN)
recule(2);
droite();avance(2)
gauche()
faireFle(ORANGE)
avance(2)
droite()
avance(2)
gauche()
faireFle(GREEN)
recule(4)
faireFle(PINK)
}